# linalg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  matrix.cpp  vector.cpp
src/include/: double2d.h  double3d.h  int2d.h  int3d.h  linalg.h  matrix.h  types.h  vector.h
test/: CMakeLists.txt  main.cpp  matrix_test.cpp  vector_test.cpp
